# mallam-dataset

./: .gitignore  README.md  pyproject.toml
mallam_datasets/: backend.py  state.py
scripts/: upload-dataset.py
