[tool.poetry]
name = "mallam-datasets"
version = "0.1.0"
description = "dataset manipulation tool for mallam"
authors = ["GUO YANKE <hi@guoyk.xyz>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "mallam_datasets" }]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.14.6"
click = "^8.1.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
